button colours set to theme colour.

--- a/WebEngageSampleApp/Base.lproj/Main.storyboard
+++ b/WebEngageSampleApp/Base.lproj/Main.storyboard
@@ -2,7 +2,9 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="6Hg-g7-h7r">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -41,7 +43,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
-                                            <color key="backgroundColor" red="0.83137255909999996" green="0.3803921938" blue="0.53725492949999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                            <color key="backgroundColor" name="themeColor"/>
                                             <constraints>
                                                 <constraint firstItem="3JY-1x-SOP" firstAttribute="centerX" secondItem="B0l-ql-gvh" secondAttribute="centerX" id="LRs-n0-Xyh"/>
                                                 <constraint firstItem="3JY-1x-SOP" firstAttribute="leading" secondItem="B0l-ql-gvh" secondAttribute="leading" constant="5" id="ZI2-V5-09f"/>
@@ -125,7 +127,7 @@
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="filled" title="Login" cornerStyle="capsule">
                                             <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            <color key="baseBackgroundColor" red="0.83137254900000002" green="0.3803921569" blue="0.53725490200000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                            <color key="baseBackgroundColor" name="themeColor"/>
                                         </buttonConfiguration>
                                         <connections>
                                             <action selector="loginPressed:" destination="6Hg-g7-h7r" eventType="touchUpInside" id="iDj-QL-aRH"/>
@@ -162,6 +164,9 @@
         </scene>
     </scenes>
     <resources>
+        <namedColor name="themeColor">
+            <color red="0.54509803921568623" green="0.42745098039215684" blue="0.67843137254901964" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemRedColor">
             <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
